# aritrends

./: LICENSE  README.md  aritrends.py  requirements.txt  setup.cfg
.github/: workflow.yaml
