[metadata]
name = aritrends
version = 0.1.0  # Replace with the actual version
author = Abhineet Raj  # Replace with your full name
author_email = abhineetraj1@example.com  # Replace with your email
description = Open-source Python library for file processing tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abhineetraj1/aritrends
project_urls =
    Bug Tracker = https://github.com/abhineetraj1/aritrends/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    # List external dependencies here, e.g.,
    Pillow
    pyqrcode
    PyPDF2
    rarfile
    py7zr

[options.entry_points]
console_scripts =
    aritrends-convert = aritrends.convert:main
    aritrends-merge-pdfs = aritrends.merge_pdfs:main
    # Add more entry points as needed

[options.extras_require]
testing =
    pytest
    flake8

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
